src/objects/SSIP_Schedule__c.object
<CustomObject>
    <description>Object stores all the schedules related to the rule.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Will be referencing the grand parent and will be defaulted at the time of the Schedule creation. Need this for constraining the addressed tied to the customer.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SSIP Schedule</relationshipLabel>
        <relationshipName>SSIP_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed Billing Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Address__c.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>SSIP Schedule (Billing Address)</relationshipLabel>
        <relationshipName>SSIP_Schedule1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Will be defaulted from SSIP Rule at the time of creation.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Shipment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scheduled Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>SSIP Schedule</relationshipLabel>
        <relationshipName>SSIP_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>SSIP Schedule</relationshipLabel>
        <relationshipName>SSIP_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <description>Will be defaulted from Parent SSIP Rule</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Term</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Billing_Address__c</fullName>
        <formula>Account__r.BillingStreet + &apos;, &apos; + Account__r.BillingCity + &apos;, &apos; + Account__r.BillingPostalCode + &apos;, &apos; + Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Shipping_Address__c</fullName>
        <formula>Account__r.ShippingStreet + &apos;, &apos; +  Account__r.ShippingCity + &apos;, &apos; +  Account__r.ShippingPostalCode + &apos;, &apos; +  Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product tied to the Rule</description>
        <formula>SSIP_Rule__r.Product_Name__c</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rescheduled_Shipment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rescheduled Shipment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SSIP_Rule__c</fullName>
        <description>Master Detail relationship to the parent Rule.</description>
        <label>SSIP Rule</label>
        <referenceTo>SSIP_Rule__c</referenceTo>
        <relationshipLabel>SSIP Schedule</relationshipLabel>
        <relationshipName>SSIP_Schedule</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schedule_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List of all Ship To addresses tied to the customer.</description>
        <label>Changed Shipping Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Address__c.Type__c</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>SSIP Schedule</relationshipLabel>
        <relationshipName>SSIP_Schedule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <description>Shipping Method will be defaulted based on the country default value.</description>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Shipping_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&apos;Open&apos;</defaultValue>
        <description>Will be defaulted to Open. Depending on the Order processing other values will be set.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Error</fullName>
                </value>
                <value>
                    <fullName>In Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Try_to_Create_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Try to Create Order</label>
        <type>Checkbox</type>
    </fields>
    <label>SSIP Schedule</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSIP Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>